# iter-together-FINISHED

./: .bumpversion.cfg  .flake8  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  tox.ini
docs/source/: cli.rst  conf.py  index.rst  usage.rst
src/iter_together/: __init__.py  __main__.py  cli.py  utils.py  version.py
tests/: __init__.py  constants.py  test_iter.py
tests/resources/: f1.csv  f2.csv
