###############################################
# Setup Configuration                         #
# (.setup.cfg)                                #
# Adapted from https://github.com/pybel/pybel #
###############################################
[metadata]
name = iter_together
version = 0.0.1-dev
description = Parsing, validation, compilation, and data exchange of Biological Expression Language (BEL)
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/cthoyt-teaches-reproducibility/iter-together
download_url = https://github.com/cthoyt-teaches-reproducibility/iter-together/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt-teaches-reproducibility/iter-together/issues
    Source Code = https://github.com/cthoyt-teaches-reproducibility/iter-together

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
keywords =
    itertools

[options]
install_requires =
    click
    click-plugins

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    iter-together = iter_together.cli:main

#######################
# Doc8 Configuration  #
# (formerly doc8.ini) #
#######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (formerly .coveragerc) #
##########################
[coverage:run]
branch = True
source = iter_together
omit =
    src/iter_together/__main__.py
    src/iter_together/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/iter_together
    .tox/*/lib/python*/site-packages/iter_together

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
